# azure-app-configuration

./: .travis.yml  Cargo.toml  README.md  build.sh
examples/: get_key_value.rs  list_key_values.rs  list_keys.rs  list_labels.rs  remove_key_value.rs  set_key_value.rs  set_key_value_with_tags.rs
src/: client.rs  endpoints.rs  error.rs  lib.rs  main.rs  model.rs  request.rs  request_sign.rs  requests.rs  search_label.rs
