[package]
name = "azure-app-configuration"
version = "0.1.0"
authors = ["clanderas"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/CarlosLanderas/azure-app-configuration"
homepage = "https://github.com/CarlosLanderas/azure-app-configuration"
documentation = "https://docs.rs/azure-app-configuration"
description = "Azure App Configuration client for Rust"
keywords = ["azure", "app-configuration", "cloud", "api-wrapper", "client"]
categories = ["api-bindings", "config"]
readme = "README.md"

[dependencies]
surf = "1.0.2"
sha2 = "0.8.0"
mime = "0.3.14"
http = "0.1.18"
hmac = "0.7.1"
base64 = "0.10.1"
url = "2.1.0"
async-std = "0.99.4"
httpdate = "0.3.2"
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0.40"
log = "0.4.8"

[dev-dependencies]
femme = "1.2.0"

[[example]]
name = "list-key-values"
path = "examples/list_key_values.rs"
[[example]]
name = "list-labels"
path = "examples/list_labels.rs"
[[example]]
name = "list-keys"
path = "examples/list_keys.rs"
[[example]]
name = "get-key-value"
path = "examples/get_key_value.rs"
[[example]]
name = "set-key-value"
path = "examples/set_key_value.rs"
[[example]]
name = "set-key-value-with-tags"
path = "examples/set_key_value_with_tags.rs"
[[example]]
name = "remove-key-value"
path = "examples/remove_key_value.rs"